--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -85,11 +85,12 @@ jobs:
         run: |
           make test CI_RUN=${CI}
       - name: Upload codecov result
-        uses: codecov/codecov-action@v1
+        uses: codecov/codecov-action@v3
         continue-on-error: true
         with:
           token: ${{ secrets.CODECOV_TOKEN }} # not required for public repos
           files: coverage.out
+          fail_ci_if_error: false
 
   code_scans:
     needs: [ prepare ]
