--- a/.github/workflows/autoupdate.yaml
+++ b/.github/workflows/autoupdate.yaml
@@ -62,6 +62,7 @@ jobs:
 
       - name: Run unit tests
         run: |
+          export GITHUB_TOKEN={{ secrets.GHCR_TOKEN }}
           CI_RUN=${CI} make test
           git config --global --add safe.directory /__w/graphql-monitoring-proxy/graphql-monitoring-proxy
 
