Add debug mode parameter.

--- a/action.yml
+++ b/action.yml
@@ -1,36 +1,39 @@
 # action.yml
-name: 'Semantic Version Generator'
-description: 'Automagic semantic version generator'
+name: "Semantic Version Generator"
+description: "Automagic semantic version generator"
 author: Lukasz Raczylo
 branding:
   icon: chevron-right
   color: gray-dark
 inputs:
   config_file:
-    description: 'Configuration file'
+    description: "Configuration file"
     required: false
   repository_url:
-    description: 'Repository URL'
+    description: "Repository URL"
     required: false
-    default: 'https://github.com/lukaszraczylo/simple-gql-client'
+    default: "https://github.com/lukaszraczylo/simple-gql-client"
   repository_local:
-    description: 'Use already cloned repository in current directory'
+    description: "Use already cloned repository in current directory"
     required: false
   github_token:
-    description: 'GitHub Personal Access Token OR password'
+    description: "GitHub Personal Access Token OR password"
     required: false
   github_username:
-    description: 'GitHub or other git hosting provider username'
+    description: "GitHub or other git hosting provider username"
     required: false
   strict:
-    description: 'Strict mode'
+    description: "Strict mode"
     required: false
   existing:
-    description: 'Respect existing tags'
+    description: "Respect existing tags"
+    required: false
+  debugmode:
+    description: "Debug mode"
     required: false
 outputs:
   semantic_version:
-    description: 'Calculated semantic version'
+    description: "Calculated semantic version"
 runs:
-  using: 'docker'
-  image: 'docker://ghcr.io/lukaszraczylo/semver-generator:latest'
+  using: "docker"
+  image: "docker://ghcr.io/lukaszraczylo/semver-generator:latest"
