--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -55,56 +55,20 @@ release:
   draft: false
   prerelease: auto
 
-dockers:
-  - id: semver-gen-amd64
-    goos: linux
-    goarch: amd64
-    ids:
-      - semver-gen
-    image_templates:
-      - "ghcr.io/lukaszraczylo/semver-generator:{{ .Version }}-amd64"
-      - "ghcr.io/lukaszraczylo/semver-generator:latest-amd64"
-      - "ghcr.io/lukaszraczylo/semver-generator:v1-amd64"
+dockers_v2:
+  - images:
+      - "ghcr.io/lukaszraczylo/semver-generator"
+    tags:
+      - "{{ .Version }}"
+      - "latest"
+      - "v1"
+    platforms:
+      - linux/amd64
+      - linux/arm64
     dockerfile: Dockerfile.goreleaser
-    use: buildx
-    build_flag_templates:
-      - "--platform=linux/amd64"
     extra_files:
       - config-release.yaml
       - entrypoint.sh
-
-  - id: semver-gen-arm64
-    goos: linux
-    goarch: arm64
-    ids:
-      - semver-gen
-    image_templates:
-      - "ghcr.io/lukaszraczylo/semver-generator:{{ .Version }}-arm64"
-      - "ghcr.io/lukaszraczylo/semver-generator:latest-arm64"
-      - "ghcr.io/lukaszraczylo/semver-generator:v1-arm64"
-    dockerfile: Dockerfile.goreleaser
-    use: buildx
-    build_flag_templates:
-      - "--platform=linux/arm64"
-    extra_files:
-      - config-release.yaml
-      - entrypoint.sh
-
-docker_manifests:
-  - name_template: "ghcr.io/lukaszraczylo/semver-generator:{{ .Version }}"
-    image_templates:
-      - "ghcr.io/lukaszraczylo/semver-generator:{{ .Version }}-amd64"
-      - "ghcr.io/lukaszraczylo/semver-generator:{{ .Version }}-arm64"
-
-  - name_template: "ghcr.io/lukaszraczylo/semver-generator:latest"
-    image_templates:
-      - "ghcr.io/lukaszraczylo/semver-generator:latest-amd64"
-      - "ghcr.io/lukaszraczylo/semver-generator:latest-arm64"
-
-  - name_template: "ghcr.io/lukaszraczylo/semver-generator:v1"
-    image_templates:
-      - "ghcr.io/lukaszraczylo/semver-generator:v1-amd64"
-      - "ghcr.io/lukaszraczylo/semver-generator:v1-arm64"
 
 homebrew_casks:
   - repository:
