--- a/Dockerfile.goreleaser
+++ b/Dockerfile.goreleaser
@@ -1,5 +1,6 @@
 FROM ubuntu:jammy
-COPY semver-gen /go/src/app/semver-gen
+ARG TARGETPLATFORM
+COPY ${TARGETPLATFORM}/semver-gen /go/src/app/semver-gen
 COPY config-release.yaml /go/src/app/config.yaml
 COPY entrypoint.sh /entrypoint.sh
 RUN chmod +x /entrypoint.sh
