fixup! Update binary confusion.

--- a/Dockerfile.goreleaser
+++ b/Dockerfile.goreleaser
@@ -1,6 +1,6 @@
 FROM ubuntu:jammy
 ARG TARGETPLATFORM
-COPY ${TARGETPLATFORM}/semver-gen /go/src/app/semver-gen
+COPY ${TARGETPLATFORM}/semver-generator /go/src/app/semver-generator
 COPY config-release.yaml /go/src/app/config.yaml
 COPY entrypoint.sh /entrypoint.sh
 RUN chmod +x /entrypoint.sh
