--- a/.github/workflows/autoupdate.yaml
+++ b/.github/workflows/autoupdate.yaml
@@ -8,6 +8,7 @@ on:
 permissions:
   contents: write
   actions: write
+  pull-requests: write
 
 jobs:
   autoupdate:
@@ -15,3 +16,5 @@ jobs:
     with:
       go-version: "1.24"
       release-workflow: "release.yaml"
+    secrets:
+      pat-token: ${{ secrets.HOMEBREW_TAP_TOKEN }}
