--- a/config-release.yaml
+++ b/config-release.yaml
@@ -1,15 +1,13 @@
 version: 1
 force:
   major: 1
-  minor: 4
   existing: true
   strict: false
-  commit: 960207e4677476ad31a9f389f74eaf9f33d49613
-# tag_prefixes: (optional) prefixes to strip from existing tags
-# Note: "v" prefix is always stripped automatically
-# tag_prefixes:
-#   - "app-"
-#   - "service-"
+blacklist:
+  - "Merge branch"
+  - "Merge pull request"
+  - "feature/"
+  - "feature:"
 wording:
   patch:
     - update
@@ -20,3 +18,5 @@ wording:
     - improve
   major:
     - breaking
+  release:
+    - release-candidate
